done: https://www.leshenko.net/p/ugit/#add-object-type